syntax = "proto3";
package google.protobuf;
option csharp_namespace = "Proto.Dota";

option optimize_for = SPEED;
option cc_generic_services = false;

enum DOTA_GameMode {
    DOTA_GAMEMODE_NONE = 0;
    DOTA_GAMEMODE_AP = 1;
    DOTA_GAMEMODE_CM = 2;
    DOTA_GAMEMODE_RD = 3;
    DOTA_GAMEMODE_SD = 4;
    DOTA_GAMEMODE_AR = 5;
    DOTA_GAMEMODE_INTRO = 6;
    DOTA_GAMEMODE_HW = 7;
    DOTA_GAMEMODE_REVERSE_CM = 8;
    DOTA_GAMEMODE_XMAS = 9;
    DOTA_GAMEMODE_TUTORIAL = 10;
    DOTA_GAMEMODE_MO = 11;
    DOTA_GAMEMODE_LP = 12;
    DOTA_GAMEMODE_POOL1 = 13;
    DOTA_GAMEMODE_FH = 14;
    DOTA_GAMEMODE_CUSTOM = 15;
    DOTA_GAMEMODE_CD = 16;
    DOTA_GAMEMODE_BD = 17;
    DOTA_GAMEMODE_ABILITY_DRAFT = 18;
    DOTA_GAMEMODE_EVENT = 19;
    DOTA_GAMEMODE_ARDM = 20;
    DOTA_GAMEMODE_1V1MID = 21;
    DOTA_GAMEMODE_ALL_DRAFT = 22;
	DOTA_GAMEMODE_TURBO = 23;
	DOTA_GAMEMODE_MUTATION = 24;
}

enum EEvent {
	EVENT_ID_NONE = 0;
	EVENT_ID_DIRETIDE = 1;
	EVENT_ID_SPRING_FESTIVAL = 2;
	EVENT_ID_FROSTIVUS_2013 = 3;
	EVENT_ID_COMPENDIUM_2014 = 4;
	EVENT_ID_NEXON_PC_BANG = 5;
	EVENT_ID_PWRD_DAC_2015 = 6;
	EVENT_ID_NEW_BLOOM_2015 = 7;
	EVENT_ID_INTERNATIONAL_2015 = 8;
	EVENT_ID_FALL_MAJOR_2015 = 9;
	EVENT_ID_ORACLE_PA = 10;
	EVENT_ID_NEW_BLOOM_2015_PREBEAST = 11;
	EVENT_ID_FROSTIVUS = 12;
	EVENT_ID_WINTER_MAJOR_2016 = 13;
	EVENT_ID_INTERNATIONAL_2016 = 14;
	EVENT_ID_FALL_MAJOR_2016 = 15;
	EVENT_ID_WINTER_MAJOR_2017 = 16;
	EVENT_ID_NEW_BLOOM_2017 = 17;
	EVENT_ID_INTERNATIONAL_2017 = 18;
	EVENT_ID_PLUS_SUBSCRIPTION = 19;
	EVENT_ID_SINGLES_DAY_2017 = 20;
	EVENT_ID_FROSTIVUS_2017 = 21;
	EVENT_ID_INTERNATIONAL_2018 = 22;
    EVENT_ID_FROSTIVUS_2018 = 23;
    EVENT_ID_NEW_BLOOM_2019 = 24;
    EVENT_ID_COUNT = 25;
}

enum EMatchOutcome {
    k_EMatchOutcome_Unknown = 0;
    k_EMatchOutcome_RadVictory = 2;
    k_EMatchOutcome_DireVictory = 3;
    k_EMatchOutcome_NotScored_PoorNetworkConditions = 64;
    k_EMatchOutcome_NotScored_Leaver = 65;
    k_EMatchOutcome_NotScored_ServerCrash = 66;
    k_EMatchOutcome_NotScored_NeverStarted = 67;
    k_EMatchOutcome_NotScored_Canceled = 68;
}

message CMatchPlayerAbilityUpgrade {
      uint32 ability = 1;
      uint32 time = 2;
}

message CMatchAdditionalUnitInventory {
      string unit_name = 1;
    repeated uint32 items = 2;
}

message CMatchPlayerPermanentBuff {
      uint32 permanent_buff = 1;
      uint32 stack_count = 2;
}

message CMatchHeroSelectEvent {
      bool is_pick = 1;
      uint32 team = 2;
      uint32 hero_id = 3;
}

message CMsgDOTAMatch {
	message Player {
		message CustomGameData {
			  uint32 dota_team = 1;
			  bool winner = 2;
		}

		  uint32 account_id = 1;
		  uint32 player_slot = 2;
		  uint32 hero_id = 3;
		  uint32 item_0 = 4;
		  uint32 item_1 = 5;
		  uint32 item_2 = 6;
		  uint32 item_3 = 7;
		  uint32 item_4 = 8;
		  uint32 item_5 = 9;
		  uint32 item_6 = 59;
		  uint32 item_7 = 60;
		  uint32 item_8 = 61;
		  float expected_team_contribution = 10;
		  float scaled_metric = 11;
		  uint32 previous_rank = 12;
		  sint32 rank_change = 13;
		  bool solo_rank = 49;
		  bool seasonal_rank = 53;
		  bool rank_tier_updated = 66;
		  uint32 kills = 14;
		  uint32 deaths = 15;
		  uint32 assists = 16;
		  uint32 leaver_status = 17;
		  uint32 gold = 18;
		  uint32 last_hits = 19;
		  uint32 denies = 20;
		  uint32 gold_per_min = 21;
		  uint32 XP_per_min = 22;
		  uint32 gold_spent = 23;
		  uint32 hero_damage = 24;
		  uint32 tower_damage = 25;
		  uint32 hero_healing = 26;
		  uint32 level = 27;
		  uint32 time_last_seen = 28;
		  string player_name = 29;
		  uint32 support_ability_value = 30;
		  bool feeding_detected = 32;
		  uint32 search_rank = 34;
		  uint32 search_rank_uncertainty = 35;
		  int32 rank_uncertainty_change = 36;
		  uint32 hero_play_count = 37;
		  fixed64 party_id = 38;
		  uint32 scaled_hero_damage = 54;
		  uint32 scaled_tower_damage = 55;
		  uint32 scaled_hero_healing = 56;
		  float scaled_kills = 39;
		  float scaled_deaths = 40;
		  float scaled_assists = 41;
		  uint32 claimed_farm_gold = 42;
		  uint32 support_gold = 43;
		  uint32 claimed_denies = 44;
		  uint32 claimed_misses = 45;
		  uint32 misses = 46;
		repeated CMatchPlayerAbilityUpgrade ability_upgrades = 47;
		repeated CMatchAdditionalUnitInventory additional_units_inventory = 48;
		repeated CMatchPlayerPermanentBuff permanent_buffs = 57;
		  CMsgDOTAMatch.Player.CustomGameData custom_game_data = 50;
		  bool active_prime_subscription = 51;
		  uint32 net_worth = 52;
		  uint32 bot_difficulty = 58;
		  uint32 hero_pick_order = 63;
		  bool hero_was_randomed = 64;
		  bool hero_was_bonus = 65;
	}

    message BroadcasterInfo {
          uint32 account_id = 1;
          string name = 2;
    }

    message BroadcasterChannel {
          string country_code = 1;
          string description = 2;
        repeated CMsgDOTAMatch.BroadcasterInfo broadcaster_infos = 3;
          string language_code = 4;
    }

    message CustomGameData {
          uint64 custom_game_id = 1;
          string map_name = 2;
    }

    enum ReplayState {
        REPLAY_AVAILABLE = 0;
        REPLAY_NOT_RECORDED = 1;
        REPLAY_EXPIRED = 2;
    }

      bool good_guys_win = 2;
      uint32 duration = 3;
      fixed32 startTime = 4;
    repeated CMsgDOTAMatch.Player players = 5;
      uint64 match_id = 6;
    repeated uint32 tower_status = 8;
    repeated uint32 barracks_status = 9;
      uint32 cluster = 10;
      uint32 first_blood_time = 12;
      fixed32 replay_salt = 13;
      fixed32 server_ip = 14;
      uint32 server_port = 15;
      uint32 lobby_type = 16;
      uint32 human_players = 17;
      uint32 average_skill = 18;
      float game_balance = 19;
      uint32 radiant_team_id = 20;
      uint32 dire_team_id = 21;
      uint32 leagueid = 22;
      string radiant_team_name = 23;
      string dire_team_name = 24;
      uint64 radiant_team_logo = 25;
      uint64 dire_team_logo = 26;
      uint32 radiant_team_complete = 27;
      uint32 dire_team_complete = 28;
      uint32 positive_votes = 29;
      uint32 negative_votes = 30;
      DOTA_GameMode game_mode = 31 ;
    repeated CMatchHeroSelectEvent picks_bans = 32;
      uint64 match_seq_num = 33;
      CMsgDOTAMatch.ReplayState replay_state = 34 ;
      uint32 radiant_guild_id = 35;
      uint32 dire_guild_id = 36;
      string radiant_team_tag = 37;
      string dire_team_tag = 38;
      uint32 series_id = 39;
      uint32 series_type = 40;
    repeated CMsgDOTAMatch.BroadcasterChannel broadcaster_channels = 43;
      uint32 engine = 44;
      CMsgDOTAMatch.CustomGameData custom_game_data = 45;
      uint32 match_flags = 46;
      fixed32 private_metadata_key = 47;
      uint32 radiant_team_score = 48;
      uint32 dire_team_score = 49;
      EMatchOutcome match_outcome = 50 ;
      uint32 tournament_id = 51;
      uint32 tournament_round = 52;
      uint32 pre_game_duration = 53;
}

message CMsgMatchTips {
	message SingleTip {
		  uint32 source_account_id = 1;
		  uint32 target_account_id = 2;
		  uint32 tip_amount = 3;
	}

	  EEvent event_id = 1 ;
	repeated CMsgMatchTips.SingleTip tips = 2;
}
